[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[project]
name = "calculate_hanka"
version = "0.0.2"
dependencies = ["numpy", "click"]
authors = [{name="HankaM"}]
description = "An example how to package a modul"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3", 
"Operating System :: OS Independent"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
flip_coin = "calculate_hanka.cli:flip_coin_cli" 
roll_dice = "calculate_hanka.cli:roll_dice_cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]